[gd_scene load_steps=2 format=3 uid="uid://x1dnfrdhqetk"]

[ext_resource type="Script" path="res://addons/dialogue/example/dialogue_box/dialogue_box.gd" id="1_d1w83"]

[node name="DialogueBox" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_d1w83")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DialogueLine" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/DialogueLine"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="PanelContainer/MarginContainer/DialogueLine/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Speaker:"
uppercase = true

[node name="DialogueLineLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/DialogueLine/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Some text goes here"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/DialogueLine"]
layout_mode = 2
alignment = 2

[node name="ContinueButton" type="Button" parent="PanelContainer/MarginContainer/DialogueLine/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="DialogueOptions" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
